--- a/fc_community/board/templates/board_detail.html
+++ b/fc_community/board/templates/board_detail.html
@@ -2,20 +2,18 @@
 
 {% block contents %}
 <div class="row mt-5">
-    <div class="col-12">
-        <div class="form-group">
-            <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-            {% ifequal field.name 'contents' %}
-            <textarea class="form-control" name="{{ field.name }}" placeholder="{{ field.label }}"></textarea>
-            {% else %}
-            <input type="{{ field.field.widget.input_type }}" class="form-control" id="{{ field.id_for_label }}" 
-            placeholder="{{ field.label }}" name="{{ field.name }}" />
-            {% endifequal %}
-        </div>
-        {% if field.errors %}
-        <span style="color: red;">{{ field.errors }}</span>
-        {% endif %}
-        <button type="submit" class="btn btn-primary">글쓰기</button>
+  <div class="col-12">
+    <div class="form-group">
+      <label for="title">제목</label>
+      <input type="text" class="form-control" id="title" value="{{ board.title }}" readonly />
+      <label for="contents">내용</label>
+      <textarea class="form-control" readonly>{{ board.contents }}</textarea>
+      <label for="tags">태그</label>
+      <span id="tags" class="form-control">
+        {{ board.tags.all|join:", " }}
+      </span>
     </div>
+    <button class="btn btn-primary" onclick="location.href='/board/list/'">돌아가기</button>
+  </div>
 </div>
 {% endblock %}
