--- a/fc_community/board/templates/board_list.html
+++ b/fc_community/board/templates/board_list.html
@@ -18,7 +18,7 @@
                     <th>{{ board.id }}</th>
                     <td>{{ board.title }}</td>
                     <td>{{ board.writer }}</td>
-                    <td>{{ board.register_dttm }}</td>
+                    <td>{{ board.registered_dttm }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
